--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@dfinity/agent": "^0.19.2",
     "@dfinity/candid": "^0.19.2",
-    "@dfinity/principal": "^0.19.2"
+    "@dfinity/principal": "^0.19.2",
+    "ethers": "^6.7.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "assert": "2.0.0",
