--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^6.1.0",
-    "@mui/lab": "^6.0.0-beta.9",
-    "@mui/material": "^6.1.0",
     "bitcoinjs-lib": "^6.1.5",
     "css-loader": "^6.8.1",
     "ethers": "^6.7.1",
@@ -41,14 +38,18 @@
   },
   "devDependencies": {
     "assert": "2.0.0",
+    "autoprefixer": "^10.4.20",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
     "dotenv": "^16.0.3",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.4.12",
     "terser-webpack-plugin": "^5.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
