Feat/petition solving (#13)
* starting to make canister receive payment from solving petition and then releasing after validating (solvePetitionEvm2Evm)

* Fixes solvepetitionevm2evm

* Fixes solvepetitionevm2evm

* solvePetitionLN2EVM working by sending solve evm tx to canister, which then releases it to petition creator and pays invoice sent by petition solver

* solvePetitionEVM2LN working by paying invoice generated by canister, which then releases it to petition creator and pays petition solver using evm chain

* UI updates to use material UI

* Updated UI to use tailwind

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "webpack",
     "prebuild": "dfx generate",
-    "start": "webpack serve --mode development --env development",
+    "start": "webpack serve --mode development --env development --progress",
     "deploy:local": "dfx deploy --network=local",
     "deploy:ic": "dfx deploy --network=ic",
     "generate": "dfx generate send_http_get_backend"
@@ -20,9 +20,11 @@
     "@dfinity/agent": "^0.19.2",
     "@dfinity/candid": "^0.19.2",
     "@dfinity/principal": "^0.19.2",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bitcoinjs-lib": "^6.1.5",
     "css-loader": "^6.8.1",
     "ethers": "^6.7.1",
@@ -36,14 +38,18 @@
   },
   "devDependencies": {
     "assert": "2.0.0",
+    "autoprefixer": "^10.4.20",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
     "dotenv": "^16.0.3",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.4.12",
     "terser-webpack-plugin": "^5.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
