--- a/package.json
+++ b/package.json
@@ -25,15 +25,21 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "bitcoinjs-lib": "^6.1.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "css-loader": "^6.8.1",
     "ethers": "^6.7.1",
     "light-bolt11-decoder": "^3.1.1",
+    "lucide-react": "^0.453.0",
     "nostr-tools": "^1.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "request": "^2.88.2",
+    "tailwind-merge": "^2.5.4",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
