--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "axios": "^1.7.7",
     "bitcoinjs-lib": "^6.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
